--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="Interestcalc.css">
-    <script src="Interestcalc.js"></script>
+    <link rel="stylesheet" href="styles.css">
+    <script src="script.js"></script>
 
 </head>
 
